samples/_failures_safe/1761601710_51db34_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5e2b08c.c: In function ‘main’:
./samples/SAFE/__tmp_b5e2b08c.c:167:5: error: expected declaration or statement at end of input
  167 |     Token tokens[MAX_TOKENS];
      |     ^~~~~
